Revises config endpoint
