# app/web/api/openapi/openapi.yaml
@@ -94,7 +94,7 @@ paths:
                   loggingLevel: WARN
                   DCUpdateIntervalInSec: 3
                   selectedFanCurve:
-                    id: 916CD0EB-A755-4663-8410-461431039F74
+                    did: 916CD0EB-A755-4663-8410-461431039F74
                     name: Quiet
                     fanCurveSeries:
                     - tempInCels: 30
@@ -173,21 +173,21 @@ paths:
               examples:
                 app-fanCurves_collection:
                   value:
-                  - id: 916CD0EB-A755-4663-8410-461431039F74
+                  - did: 916CD0EB-A755-4663-8410-461431039F74
                     name: Quiet
                     fanCurveSeries:
                     - tempInCels: 30
                       fanDCInPerc: 40
                     - tempInCels: 35
                       fanDCInPerc: 50
-                  - id: 316CD0EB-A755-4463-8410-461411039F74
+                  - did: 316CD0EB-A755-4463-8410-461411039F74
                     name: Quiet-2
                     fanCurveSeries:
                     - tempInCels: 30
                       fanDCInPerc: 20
                     - tempInCels: 35
                       fanDCInPerc: 10
-                  - id: 016ED0EB-A755-4663-8210-461431039F74
+                  - did: 016ED0EB-A755-4663-8210-461431039F74
                     name: Loud
                     fanCurveSeries:
                     - tempInCels: 20
@@ -240,7 +240,7 @@ paths:
               examples:
                 app-fanCurves_singleton:
                   value:
-                    id: 916CD0EB-A755-4663-8410-461431039F74
+                    did: 916CD0EB-A755-4663-8410-461431039F74
                     name: Quiet
                     fanCurveSeries:
                     - tempInCels: 30
@@ -264,10 +264,10 @@ paths:
       summary: Adds new fan curve
       x-openapi-router-controller: app.web.api.controllers.default_controller
     summary: Enables user to view all fan curves or to add a new one (up to 10 max)
-  /app/fanCurves/{id}:
+  /app/fanCurves/{did}:
     delete:
-      description: Deletes fan curve whose id correspond to specified `id`
-      operationId: app_fan_curves_id_delete
+      description: Deletes fan curve whose id correspond to specified `did`
+      operationId: app_fan_curves_did_delete
       parameters:
       - description: Id of the fan curve (generated, i.e., surrogate key)
         examples:
@@ -275,7 +275,7 @@ paths:
             value: 4731ab6a-433b-11ec-8321-c3a754deb306
         explode: false
         in: path
-        name: id
+        name: did
         required: true
         schema:
           type: string
@@ -284,16 +284,16 @@ paths:
         "204":
           description: Empty body
         "404":
-          description: Requested fan curve w/ `id` doesn't exist
+          description: Requested fan curve w/ `did` doesn't exist
         "423":
-          description: Fan curve corresponding to `id` cannot be deleted since fan
+          description: Fan curve corresponding to `did` cannot be deleted since fan
             curve is currently in use
-      summary: Deletes fan curve whose id correspond to specified "id"
+      summary: Deletes fan curve whose id correspond to specified "did"
       x-openapi-router-controller: app.web.api.controllers.default_controller
     description: Singleton resource for fan curves
     get:
-      description: Returns requested fan curve whose id corresponds to specified `id`
-      operationId: app_fan_curves_id_get
+      description: Returns requested fan curve whose id corresponds to specified `did`
+      operationId: app_fan_curves_did_get
       parameters:
       - description: Id of the fan curve (generated, i.e., surrogate key)
         examples:
@@ -301,7 +301,7 @@ paths:
             value: 4731ab6a-433b-11ec-8321-c3a754deb306
         explode: false
         in: path
-        name: id
+        name: did
         required: true
         schema:
           type: string
@@ -313,7 +313,7 @@ paths:
               examples:
                 app-fanCurves_singleton:
                   value:
-                    id: 916CD0EB-A755-4663-8410-461431039F74
+                    did: 916CD0EB-A755-4663-8410-461431039F74
                     name: Quiet
                     fanCurveSeries:
                     - tempInCels: 30
@@ -333,12 +333,12 @@ paths:
                 type: string
               style: simple
         "404":
-          description: Requested fan curve w/ `id` doesn't exist
-      summary: Returns requested fan curve whose id corresponds to specified "id"
+          description: Requested fan curve w/ `did` doesn't exist
+      summary: Returns requested fan curve whose id corresponds to specified "did"
       x-openapi-router-controller: app.web.api.controllers.default_controller
     put:
-      description: Updates requested fan curve whose id corresponds to specified `id`
-      operationId: app_fan_curves_id_put
+      description: Updates requested fan curve whose id corresponds to specified `did`
+      operationId: app_fan_curves_did_put
       parameters:
       - description: Id of the fan curve (generated, i.e., surrogate key)
         examples:
@@ -346,7 +346,7 @@ paths:
             value: 4731ab6a-433b-11ec-8321-c3a754deb306
         explode: false
         in: path
-        name: id
+        name: did
         required: true
         schema:
           type: string
@@ -377,7 +377,7 @@ paths:
                     fanDCInPerc: 50
             schema:
               $ref: '#/components/schemas/AppFanCurveBase'
-        description: Must contain the the updated fan curve corresponding to `id`
+        description: Must contain the the updated fan curve corresponding to `did`
         required: true
       responses:
         "200":
@@ -386,7 +386,7 @@ paths:
               examples:
                 app-fanCurves_singleton:
                   value:
-                    id: 916CD0EB-A755-4663-8410-461431039F74
+                    did: 916CD0EB-A755-4663-8410-461431039F74
                     name: Quiet
                     fanCurveSeries:
                     - tempInCels: 30
@@ -408,11 +408,11 @@ paths:
         "400":
           description: The request failed due to a malformed request body
         "404":
-          description: Requested fan curve w/ `id` doesn't exist
-      summary: Updates requested fan curve whose id corresponds to specified "id"
+          description: Requested fan curve w/ `did` doesn't exist
+      summary: Updates requested fan curve whose id corresponds to specified "did"
       x-openapi-router-controller: app.web.api.controllers.default_controller
     summary: Allows user to view, update or delete fan curve corresponding to specified
-      "id"
+      "did"
   /app/logs/:
     description: Collection resource for logs
     get:
@@ -771,21 +771,21 @@ components:
           examples:
             app-fanCurves_collection:
               value:
-              - id: 916CD0EB-A755-4663-8410-461431039F74
+              - did: 916CD0EB-A755-4663-8410-461431039F74
                 name: Quiet
                 fanCurveSeries:
                 - tempInCels: 30
                   fanDCInPerc: 40
                 - tempInCels: 35
                   fanDCInPerc: 50
-              - id: 316CD0EB-A755-4463-8410-461411039F74
+              - did: 316CD0EB-A755-4463-8410-461411039F74
                 name: Quiet-2
                 fanCurveSeries:
                 - tempInCels: 30
                   fanDCInPerc: 20
                 - tempInCels: 35
                   fanDCInPerc: 10
-              - id: 016ED0EB-A755-4663-8210-461431039F74
+              - did: 016ED0EB-A755-4663-8210-461431039F74
                 name: Loud
                 fanCurveSeries:
                 - tempInCels: 20
@@ -805,7 +805,7 @@ components:
           examples:
             app-fanCurves_singleton:
               value:
-                id: 916CD0EB-A755-4663-8410-461431039F74
+                did: 916CD0EB-A755-4663-8410-461431039F74
                 name: Quiet
                 fanCurveSeries:
                 - tempInCels: 30
@@ -1173,7 +1173,7 @@ components:
       description: Fan curve consisting of id, fan curve series data and name (used
         for `GET`).
       example:
-        id: 916CD0EB-A755-4663-8410-461431039F74
+        did: 916CD0EB-A755-4663-8410-461431039F74
         name: Quiet
         fanCurveSeries:
         - tempInCels: 30
@@ -1190,7 +1190,7 @@ components:
         loggingLevel: WARN
         DCUpdateIntervalInSec: 3
         selectedFanCurve:
-          id: 916CD0EB-A755-4663-8410-461431039F74
+          did: 916CD0EB-A755-4663-8410-461431039F74
           name: Quiet
           fanCurveSeries:
           - tempInCels: 30
@@ -1274,14 +1274,14 @@ components:
       type: object
     AppFanCurve_allOf:
       properties:
-        id:
+        did:
           description: Id of fan curve
           example: 916CD0EB-A755-4663-8410-461431039F74
           maxLength: 255
-          title: id
+          title: did
           type: string
       required:
-      - id
+      - did
       title: AppFanCurve_allOf
       type: object
   securitySchemes:
